--- a/EvrotorgTestApplication/MainWindow.xaml
+++ b/EvrotorgTestApplication/MainWindow.xaml
@@ -1,12 +1,119 @@
-﻿<Window x:Class="EvrotorgTestApplication.MainWindow"
+﻿<Window x:Name="windowMain" x:Class="EvrotorgTestApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EvrotorgTestApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Evrotorg Test Application" Height="720" Width="1280" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="1100" MinHeight="700">
+    <Grid x:Name="gridPanelsContainer" ShowGridLines="True">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="2.5*"/>
+        </Grid.ColumnDefinitions>
+        <Grid x:Name="gridLeftPanel" ShowGridLines="True">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="1.5*"/>
+            </Grid.RowDefinitions>
+            <Button x:Name="buttonLoadFromSite" Content="Load from site" Margin="5,10,5,10"/>
+            <Button x:Name="buttonLoadFromFile" Content="Load from file" Margin="5,10,5,10" Grid.Row="1"/>
+            <Button x:Name="buttonSaveToFile" Content="Save to file" Margin="5,10,5,10" Grid.Row="2"/>
+            <Button x:Name="buttonSaveToNewFile" Content="Save to new file" Margin="5,10,5,10" Grid.Row="3"/>
+            <Grid x:Name="gridAuthorInfo" Grid.Row="5" ShowGridLines="True">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label x:Name="labelAuthor" Content="Author" Margin="10,5,10,5" IsManipulationEnabled="True" InputScope="Default" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <Label x:Name="labelVersion" Content="Version x.xx" Margin="10,5,10,5" IsManipulationEnabled="True" InputScope="Default" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Row="1"/>
+            </Grid>
+        </Grid>
+        <DataGrid x:Name="dataGridMainDataContainer" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <Grid x:Name="gridRightPanel" Grid.Column="2" ShowGridLines="True">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <GroupBox x:Name="groupBoxDateFilterGroup" Header="Date filter">
+                <Grid x:Name="gridDateTimeFilter" ShowGridLines="True">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="6*"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid x:Name="gridFirstDateTime" ShowGridLines="True">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition Height="5*"/>
+                            <RowDefinition Height="2*"/>
+                        </Grid.RowDefinitions>
+                        <Label x:Name="labelChooseFirstDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <Calendar x:Name="calendarFirstDateTime" Grid.Row="1"/>
+                    </Grid>
+                    <Grid x:Name="gridLastDateTime" ShowGridLines="True" Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition Height="5*"/>
+                            <RowDefinition Height="2*"/>
+                        </Grid.RowDefinitions>
+                        <Label x:Name="labelChooseLastDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <Calendar x:Name="calendarLastDateTime" Grid.Row="1"/>
+                    </Grid>
+                    <Button x:Name="buttonDateTimeFilterAccept" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
+                    <Button x:Name="buttonDateTimeFilterCancel" Content="Cancel" Grid.Row="2" Margin="4,4,2,4" Grid.RowSpan="1" Grid.Column="1"/>
+                </Grid>
+            </GroupBox>
+            <GroupBox x:Name="groupBoxFieldsChangingGroup" Header="Change data" Grid.RowSpan="2" Grid.Row="1">
+                <Grid x:Name="gridFieldsChanging" ShowGridLines="True">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid x:Name="gridRateChanging" Grid.ColumnSpan="2" ShowGridLines="True">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Label x:Name="labelRate" Content="Rate" VerticalAlignment="Bottom" Margin="10,5,10,10"/>
+                        <TextBox x:Name="textBoxRate" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,5,10,10" Text="*"/>
+                    </Grid>
+                    <Grid x:Name="gridAbbreviationChanging" Grid.ColumnSpan="2" ShowGridLines="True" Grid.Row="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Label x:Name="labelAbbreviation" VerticalAlignment="Bottom" Content="Abbreviation" Margin="10,5,10,10"/>
+                        <TextBox x:Name="textBoxAbbreviation" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Row="1" Margin="10,5,10,5"/>
+                    </Grid>
+                    <Button x:Name="buttonFieldChangingAccept" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
+                    <Button x:Name="buttonFieldChangingCancel" Content="Cancel" Grid.Row="3" Grid.Column="1" Margin="4,4,2,4"/>
+                </Grid>
+            </GroupBox>
+        </Grid>
     </Grid>
 </Window>
