--- a/EvrotorgTestApplication/TimePicker.xaml
+++ b/EvrotorgTestApplication/TimePicker.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EvrotorgTestApplication"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="100" d:DesignWidth="350">
     <Grid x:Name="gridMainPanel" Background="White">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -16,11 +16,11 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="labelHours" Content="Hours" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <Label x:Name="labelMinutes" Content="Minutes" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
-        <Label x:Name="labelSeconds" Content="Seconds" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2"/>
-        <TextBox x:Name="textBoxHours" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" Margin="10,10,10,10" TextChanged="textBoxHours_TextChanged"/>
-        <TextBox x:Name="textBoxMinutes" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" Grid.Column="1" Margin="10,10,10,10" TextChanged="textBoxMinutes_TextChanged"/>
-        <TextBox x:Name="textBoxSeconds" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" Grid.Column="2" Margin="10,10,10,10" TextChanged="textBoxSeconds_TextChanged"/>
+        <Label x:Name="labelHours" Content="Hours" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0,0,0,0"/>
+        <Label x:Name="labelMinutes" Content="Minutes" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Padding="0,0,0,0"/>
+        <Label x:Name="labelSeconds" Content="Seconds" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2" Padding="0,0,0,0"/>
+        <TextBox x:Name="textBoxHours" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" TextChanged="textBoxHours_TextChanged" Margin="5,0,5,0"/>
+        <TextBox x:Name="textBoxMinutes" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" Grid.Column="1" Margin="5,0,5,0" TextChanged="textBoxMinutes_TextChanged"/>
+        <TextBox x:Name="textBoxSeconds" Grid.Row="1" TextWrapping="Wrap" Text="00" VerticalAlignment="Center" HorizontalContentAlignment="Center" MaxLines="1" MaxLength="2" Grid.Column="2" Margin="5,0,5,0" TextChanged="textBoxSeconds_TextChanged"/>
     </Grid>
 </UserControl>
