--- a/EvrotorgTestApplication/Views/MainWindow.xaml
+++ b/EvrotorgTestApplication/Views/MainWindow.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EvrotorgTestApplication"
+        xmlns:local="clr-namespace:EvrotorgTestApplication" 
+        xmlns:viewmodels="clr-namespace:EvrotorgTestApplication.ViewModels" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="Evrotorg Test Application" Height="720" Width="1280" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="1100" MinHeight="700">
     <Grid x:Name="gridPanelsContainer" ShowGridLines="True">
@@ -24,11 +26,11 @@
                 <RowDefinition Height="3*"/>
                 <RowDefinition Height="1.5*"/>
             </Grid.RowDefinitions>
-            <Button x:Name="buttonLoadFromSite" Content="Load from site" Margin="5,10,5,10"/>
-            <Button x:Name="buttonLoadFromFile" Content="Load from file" Margin="5,10,5,10" Grid.Row="1"/>
-            <Button x:Name="buttonSaveToFile" Content="Save to file" Margin="5,10,5,10" Grid.Row="2"/>
-            <Button x:Name="buttonSaveToNewFile" Content="Save to new file" Margin="5,10,5,10" Grid.Row="3"/>
-            <Grid x:Name="gridAuthorInfo" Grid.Row="5" ShowGridLines="True">
+            <Button x:Name="buttonLoadFromSite" Command="{Binding LoadDataFromSite}" Content="Load from site" Margin="5,10,5,10"/>
+            <Button x:Name="buttonLoadFromFile" Command="{Binding LoadDataFromFile}" Content="Load from file" Margin="5,10,5,10" Grid.Row="1"/>
+            <Button x:Name="buttonSaveToFile" Command="{Binding SaveDataToFile}" Content="Save to file" Margin="5,10,5,10" Grid.Row="2"/>
+            <Button x:Name="buttonSaveToNewFile" Command="{Binding SaveDataToNewFile}" Content="Save to new file" Margin="5,10,5,10" Grid.Row="3"/>
+            <Grid x:Name="gridAuthorInfo" Grid.Row="6" ShowGridLines="True">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
@@ -36,18 +38,25 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Label x:Name="labelAuthor" Content="Author" Margin="10,5,10,5" IsManipulationEnabled="True" InputScope="Default" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <TextBlock x:Name="textBlockOpenedFilePath" Text="{Binding OpenedFilePath}" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="10"/>
                 <Label x:Name="labelVersion" Content="Version x.xx" Margin="10,5,10,5" IsManipulationEnabled="True" InputScope="Default" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Row="1"/>
             </Grid>
         </Grid>
-        <DataGrid x:Name="dataGridMainDataContainer" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <DataGrid x:Name="dataGridMainDataContainer" SelectedItem="{Binding SelectedCurrency}" Grid.Column="1" AutoGenerateColumns="False" ItemsSource="{Binding VisibleRatesCollection}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="1*" />
+                <DataGridTextColumn Header="Abbreviation" Binding="{Binding Cur_Abbreviation}" Width="1*" />
+                <DataGridTextColumn Header="Name" Binding="{Binding Cur_Name}" Width="1*" />
+                <DataGridTextColumn Header="OffitialRate" Binding="{Binding Cur_OfficialRate}" Width="1*" />
+            </DataGrid.Columns>
+        </DataGrid>
         <Grid x:Name="gridRightPanel" Grid.Column="2" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*"/>
                 <RowDefinition Height="4*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <GroupBox x:Name="groupBoxDateFilterGroup" Header="Date filter">
+            <GroupBox x:Name="groupBoxDateFilterGroup" IsEnabled="{Binding IsDataLoaded}" Header="Date filter">
                 <Grid x:Name="gridDateTimeFilter" ShowGridLines="True">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="6*"/>
@@ -64,7 +73,7 @@
                             <RowDefinition Height="2*"/>
                         </Grid.RowDefinitions>
                         <Label x:Name="labelChooseFirstDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <Calendar x:Name="calendarFirstDateTime" Grid.Row="1" VerticalAlignment="Center"/>
+                        <Calendar x:Name="calendarFirstDateTime" SelectedDate="{Binding FirstDateTime}" DisplayDate="{Binding FirstDateTime}" Grid.Row="1" VerticalAlignment="Center"/>
                         <local:TimePicker x:Name="timePickerFirstDateTime" Grid.Row="2" VerticalAlignment="Center"/>
                     </Grid>
                     <Grid x:Name="gridLastDateTime" ShowGridLines="True" Grid.Column="1">
@@ -74,14 +83,14 @@
                             <RowDefinition Height="2*"/>
                         </Grid.RowDefinitions>
                         <Label x:Name="labelChooseLastDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <Calendar x:Name="calendarLastDateTime" Grid.Row="1" VerticalAlignment="Center"/>
+                        <Calendar x:Name="calendarLastDateTime" SelectedDate="{Binding LastDateTime}" DisplayDate="{Binding LastDateTime}" Grid.Row="1" VerticalAlignment="Center"/>
                         <local:TimePicker x:Name="timePickerLastDateTime" Grid.Row="2" VerticalAlignment="Center"/>
                     </Grid>
-                    <Button x:Name="buttonDateTimeFilterAccept" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
-                    <Button x:Name="buttonDateTimeFilterCancel" Content="Cancel" Grid.Row="2" Margin="4,4,2,4" Grid.RowSpan="1" Grid.Column="1"/>
+                    <Button x:Name="buttonDateTimeFilterAccept" Command="{Binding AcceptDateTimeFilter}" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
+                    <Button x:Name="buttonDateTimeFilterCancel" Command="{Binding ClearDateTimeFilter}" Content="Cancel" Grid.Row="2" Margin="4,4,2,4" Grid.RowSpan="1" Grid.Column="1"/>
                 </Grid>
             </GroupBox>
-            <GroupBox x:Name="groupBoxFieldsChangingGroup" Header="Change data" Grid.RowSpan="2" Grid.Row="1">
+            <GroupBox x:Name="groupBoxFieldsChangingGroup" IsEnabled="{Binding IsDataLoaded}" Header="Change data" Grid.RowSpan="2" Grid.Row="1">
                 <Grid x:Name="gridFieldsChanging" ShowGridLines="True">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="2*"/>
@@ -102,7 +111,7 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label x:Name="labelRate" Content="Rate" VerticalAlignment="Bottom" Margin="10,5,10,10"/>
-                        <TextBox x:Name="textBoxRate" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,5,10,10" Text="*"/>
+                        <TextBox x:Name="textBoxRate" Text="{Binding ChangedRate}" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,5,10,10"/>
                     </Grid>
                     <Grid x:Name="gridAbbreviationChanging" Grid.ColumnSpan="2" ShowGridLines="True" Grid.Row="1">
                         <Grid.RowDefinitions>
@@ -110,10 +119,10 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label x:Name="labelAbbreviation" VerticalAlignment="Bottom" Content="Abbreviation" Margin="10,5,10,10"/>
-                        <TextBox x:Name="textBoxAbbreviation" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Row="1" Margin="10,5,10,5"/>
+                        <TextBox x:Name="textBoxAbbreviation" Text="{Binding ChangedAbbreviation}" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Row="1" Margin="10,5,10,5"/>
                     </Grid>
-                    <Button x:Name="buttonFieldChangingAccept" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
-                    <Button x:Name="buttonFieldChangingCancel" Content="Cancel" Grid.Row="3" Grid.Column="1" Margin="4,4,2,4"/>
+                    <Button x:Name="buttonFieldChangingAccept" Command="{Binding AcceptDataChanges}" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
+                    <Button x:Name="buttonFieldChangingCancel" Command="{Binding RevertDataChanges}" Content="Cancel" Grid.Row="3" Grid.Column="1" Margin="4,4,2,4"/>
                 </Grid>
             </GroupBox>
         </Grid>
