--- a/EvrotorgTestApplication/Views/MainWindow.xaml
+++ b/EvrotorgTestApplication/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="Evrotorg Test Application" Height="720" Width="1280" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="1100" MinHeight="700">
-    <Grid x:Name="gridPanelsContainer" ShowGridLines="True">
+    <Grid x:Name="gridPanelsContainer">
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
@@ -17,20 +17,20 @@
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="2.5*"/>
         </Grid.ColumnDefinitions>
-        <Grid x:Name="gridLeftPanel" ShowGridLines="True">
+        <Grid x:Name="gridLeftPanel">
             <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="3*"/>
+                <RowDefinition Height="5*"/>
                 <RowDefinition Height="1.5*"/>
             </Grid.RowDefinitions>
             <Button x:Name="buttonLoadFromSite" Command="{Binding LoadDataFromSite}" Content="Load from site" Margin="5,10,5,10"/>
             <Button x:Name="buttonLoadFromFile" Command="{Binding LoadDataFromFile}" Content="Load from file" Margin="5,10,5,10" Grid.Row="1"/>
-            <Button x:Name="buttonSaveToFile" Command="{Binding SaveDataToFile}" Content="Save to file" Margin="5,10,5,10" Grid.Row="2"/>
+            <Button x:Name="buttonSaveToFile" Command="{Binding SaveDataToFile}" Content="Save to opened file" Margin="5,10,5,10" Grid.Row="2"/>
             <Button x:Name="buttonSaveToNewFile" Command="{Binding SaveDataToNewFile}" Content="Save to new file" Margin="5,10,5,10" Grid.Row="3"/>
-            <Grid x:Name="gridAuthorInfo" Grid.Row="6" ShowGridLines="True">
+            <Grid x:Name="gridAdditionalInfo" Grid.Row="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
@@ -39,10 +39,10 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock x:Name="textBlockOpenedFilePath" Text="{Binding OpenedFilePath}" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="10"/>
-                <Label x:Name="labelVersion" Content="Version x.xx" Margin="10,5,10,5" IsManipulationEnabled="True" InputScope="Default" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Row="1"/>
+                <TextBlock x:Name="textBlockErrors" Text="{Binding ErrorMessage}" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="10" Grid.Row="1" Foreground="Red"/>
             </Grid>
         </Grid>
-        <DataGrid x:Name="dataGridMainDataContainer" SelectedItem="{Binding SelectedCurrency}" Grid.Column="1" AutoGenerateColumns="False" ItemsSource="{Binding VisibleRatesCollection}">
+        <DataGrid x:Name="dataGridMainDataContainer" SelectedItem="{Binding SelectedCurrency}" Grid.Column="1" AutoGenerateColumns="False" ItemsSource="{Binding VisibleRatesCollection}" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="1*" />
                 <DataGridTextColumn Header="Abbreviation" Binding="{Binding Cur_Abbreviation}" Width="1*" />
@@ -50,59 +50,53 @@
                 <DataGridTextColumn Header="OffitialRate" Binding="{Binding Cur_OfficialRate}" Width="1*" />
             </DataGrid.Columns>
         </DataGrid>
-        <Grid x:Name="gridRightPanel" Grid.Column="2" ShowGridLines="True">
+        <Grid x:Name="gridRightPanel" Grid.Column="2" Margin="5,0,5,0">
             <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="4*"/>
-                <RowDefinition Height="4*"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="3*"/>
             </Grid.RowDefinitions>
-            <GroupBox x:Name="groupBoxDateFilterGroup" IsEnabled="{Binding IsDataLoaded}" Header="Date filter">
-                <Grid x:Name="gridDateTimeFilter" ShowGridLines="True">
+            <GroupBox x:Name="groupBoxDateFilterGroup" Header="Date filter">
+                <Grid x:Name="gridDateTimeFilter">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="6*"/>
-                        <RowDefinition/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="0.5*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid x:Name="gridFirstDateTime" ShowGridLines="True">
+                    <Grid x:Name="gridFirstDateTime">
                         <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition Height="5*"/>
-                            <RowDefinition Height="2*"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Label x:Name="labelChooseFirstDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         <Calendar x:Name="calendarFirstDateTime" SelectedDate="{Binding FirstDateTime}" DisplayDate="{Binding FirstDateTime}" Grid.Row="1" VerticalAlignment="Center"/>
-                        <local:TimePicker x:Name="timePickerFirstDateTime" Grid.Row="2" VerticalAlignment="Center"/>
                     </Grid>
-                    <Grid x:Name="gridLastDateTime" ShowGridLines="True" Grid.Column="1">
+                    <Grid x:Name="gridPeriodicity" Grid.Column="1">
                         <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition Height="5*"/>
-                            <RowDefinition Height="2*"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Label x:Name="labelChooseLastDateTime" Content="Choose first date and time" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <Calendar x:Name="calendarLastDateTime" SelectedDate="{Binding LastDateTime}" DisplayDate="{Binding LastDateTime}" Grid.Row="1" VerticalAlignment="Center"/>
-                        <local:TimePicker x:Name="timePickerLastDateTime" Grid.Row="2" VerticalAlignment="Center"/>
+                        <StackPanel x:Name="radioButtonsStackPanel" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <RadioButton x:Name="radioButtonDaily" IsChecked="{Binding IsDatePeriodicityDaily}" Content="Daily" Margin="0,0,0,20" GroupName="radioButtonsGroupDatePeriodicity"/>
+                            <RadioButton x:Name="radioButtonMonthly" Content="Monthly" GroupName="radioButtonsGroupDatePeriodicity"/>
+                        </StackPanel>
                     </Grid>
-                    <Button x:Name="buttonDateTimeFilterAccept" Command="{Binding AcceptDateTimeFilter}" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
-                    <Button x:Name="buttonDateTimeFilterCancel" Command="{Binding ClearDateTimeFilter}" Content="Cancel" Grid.Row="2" Margin="4,4,2,4" Grid.RowSpan="1" Grid.Column="1"/>
                 </Grid>
             </GroupBox>
-            <GroupBox x:Name="groupBoxFieldsChangingGroup" IsEnabled="{Binding IsDataLoaded}" Header="Change data" Grid.RowSpan="2" Grid.Row="1">
-                <Grid x:Name="gridFieldsChanging" ShowGridLines="True">
+            <GroupBox x:Name="groupBoxFieldsChangingGroup" IsEnabled="{Binding IsDataLoaded}" Header="Change data" Grid.Row="2">
+                <Grid x:Name="gridFieldsChanging">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
-                        <RowDefinition Height="2*"/>
-                        <RowDefinition Height="2*"/>
-                        <RowDefinition/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="5"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="20"/>
+                        <RowDefinition Height="0.5*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Grid x:Name="gridRateChanging" Grid.ColumnSpan="2" ShowGridLines="True">
+                    <Grid x:Name="gridRateChanging" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
@@ -113,7 +107,7 @@
                         <Label x:Name="labelRate" Content="Rate" VerticalAlignment="Bottom" Margin="10,5,10,10"/>
                         <TextBox x:Name="textBoxRate" Text="{Binding ChangedRate}" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,5,10,10"/>
                     </Grid>
-                    <Grid x:Name="gridAbbreviationChanging" Grid.ColumnSpan="2" ShowGridLines="True" Grid.Row="1">
+                    <Grid x:Name="gridAbbreviationChanging" Grid.ColumnSpan="2" Grid.Row="2">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
@@ -121,8 +115,8 @@
                         <Label x:Name="labelAbbreviation" VerticalAlignment="Bottom" Content="Abbreviation" Margin="10,5,10,10"/>
                         <TextBox x:Name="textBoxAbbreviation" Text="{Binding ChangedAbbreviation}" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Row="1" Margin="10,5,10,5"/>
                     </Grid>
-                    <Button x:Name="buttonFieldChangingAccept" Command="{Binding AcceptDataChanges}" Content="Accept" Grid.Row="3" Margin="2,4,4,4"/>
-                    <Button x:Name="buttonFieldChangingCancel" Command="{Binding RevertDataChanges}" Content="Cancel" Grid.Row="3" Grid.Column="1" Margin="4,4,2,4"/>
+                    <Button x:Name="buttonFieldChangingAccept" Command="{Binding AcceptDataChanges}" Content="Accept changes" Grid.Row="4" Margin="2,4,4,4"/>
+                    <Button x:Name="buttonFieldChangingCancel" Command="{Binding RevertDataChanges}" Content="Revert changes" Grid.Row="4" Grid.Column="1" Margin="4,4,2,4"/>
                 </Grid>
             </GroupBox>
         </Grid>
